# franka_factory

./: .gitignore  README.md
scripts/: list_envs.py
scripts/data_pipeline/: COSMOS_GPU_TIMING_GUIDE.md  README.md  brev_cosmos_augment.sh  brev_train_groot.sh  brev_train_groot_n16.sh  brev_train_openvla.sh  brev_train_pizero.sh  convert_hdf5_to_lerobot_v2.py  cosmos_augmentation_brev.py  fix_lerobot_dataset.py  prepare_groot.py  prepare_openvla.py  prepare_pizero.py  prepare_pizero_v30.py  reconstruct_augmented_hdf5.py  requirements.txt  upload_to_huggingface.py
scripts/eval/: eval_vla_policy.py  run_all_evals.sh
scripts/groot_finetune/: README.md  franka_mcx_config.py  launch_finetune.py  launch_finetune_mcx.sh
scripts/mimic/: annotate_demos.py  generate_dataset.py  render_demos_full_modalities.py
source/franka_factory/: pyproject.toml  setup.py
source/franka_factory/config/: extension.toml
source/franka_factory/franka_factory/: __init__.py
source/franka_factory/franka_factory/tasks/: __init__.py
source/franka_factory/franka_factory/tasks/direct/: __init__.py
source/franka_factory/franka_factory/tasks/direct/factory/: __init__.py
source/franka_factory/franka_factory/tasks/direct/factory/agents/: __init__.py
source/franka_factory/franka_factory/tasks/imitation/: __init__.py  factory_teleop_env_cfg.py  mcx_block_mimic_env.py  mcx_block_mimic_env_cfg.py
source/franka_factory/franka_factory/tasks/imitation/agents/: __init__.py
source/franka_factory/franka_factory/tasks/imitation/mdp/: __init__.py  events.py  observations.py  terminations.py
(+5 files in other folders)
